cabal-version:       3.4
name:                jolharg-web-database
version:             0.1.0.0
license:             AGPL-3.0-only
author:              Dan Dart
maintainer:          git@dandart.co.uk
-- copyright:
-- category:
build-type:          Simple
extra-source-files:  CHANGELOG.md, README.md

library
  exposed-modules:    DB.Instances.Email
                    , DB.Instances.Name
                    , DB.Instances.Password
                    , DB.Instances.User
                    , DB.Instances.Username
                    , DB.Instances.UserType
                    , DB.Instances.VerificationToken
 -- other-extensions:
  build-depends:      base >= 4.12 && < 5
                    , jolharg-database
                    , jolharg-web-models
                    , jolharg-web-types
                    , sqlite-simple
                    , sqlite-uuid
                    , text
                    , uuid-types
  hs-source-dirs:      lib
  default-language:    Haskell2010
  default-extensions:  DerivingStrategies, NoGeneralisedNewtypeDeriving, ImportQualifiedPost, OverloadedStrings, UnicodeSyntax
  ghc-options:         -Wall -Werror
                      -Weverything
                     -Wno-unsafe -Wno-safe
                      -Wno-missing-import-lists
                      -Wno-missing-export-lists
                      -Wno-implicit-prelude
                      -Wno-missing-safe-haskell-mode
                      -Wno-missing-kind-signatures
                      -Wno-missing-local-signatures


test-suite jolharg-web-database-test
  hs-source-dirs:      test
  type:                exitcode-stdio-1.0
  default-language:    Haskell2010
  default-extensions:  DerivingStrategies, NoGeneralisedNewtypeDeriving, ImportQualifiedPost, OverloadedStrings, UnicodeSyntax
  main-is:             Spec.hs
  ghc-options: -Wall -Werror -threaded -rtsopts -with-rtsopts=-N
                      -Weverything
                     -Wno-unsafe -Wno-safe
                      -Wno-missing-import-lists
                      -Wno-missing-export-lists
                      -Wno-implicit-prelude
                      -Wno-missing-safe-haskell-mode
                      -Wno-missing-kind-signatures
                      -Wno-missing-local-signatures
  build-depends:
    base >= 4.12 && < 5
    -- , jolharg-web-database
    , hspec
    -- , hspec-core
    -- , hspec-expectations
    -- , HUnit
    -- , QuickCheck
  -- build-tool-depends: hspec-discover:hspec-discover
  other-modules:
    MainSpec
