cabal-version:      3.12
name:               jolharg-web-database
version:            0.3.0.0
license:            AGPL-3.0-only
author:             Dan Dart
maintainer:         git@dandart.co.uk

-- copyright:
-- category:
build-type:         Simple
extra-source-files:
  CHANGELOG.md
  README.md

library
  exposed-modules:
    DB.Instances.Email
    DB.Instances.Name
    DB.Instances.Password
    DB.Instances.User
    DB.Instances.Username
    DB.Instances.UserType
    DB.Instances.VerificationToken

  -- other-extensions:
  build-depends:
    , base                >=4.21.0.0 && <4.23.0.0
    , jolharg-database    ^>=0.3.0.0
    , jolharg-web-models  ^>=0.3.0.0
    , jolharg-web-types   ^>=0.3.0.0
    , sqlite-simple       ^>=0.4.19.0
    , sqlite-uuid         ^>=0.3.0.0
    , text                ^>=2.1.2
    , uuid-types          ^>=1.0.6

  hs-source-dirs:     lib
  default-language:   GHC2024
  default-extensions:
    NoGeneralisedNewtypeDeriving
    OverloadedStrings
    UnicodeSyntax

  ghc-options:
    -Wall -Werror -Weverything -Wno-unsafe -Wno-safe
    -Wno-missing-import-lists -Wno-missing-export-lists
    -Wno-implicit-prelude -Wno-missing-safe-haskell-mode
    -Wno-missing-kind-signatures -Wno-missing-poly-kind-signatures
    -Wno-missing-local-signatures -Wno-all-missed-specialisations
    -Wno-missed-specialisations -Wno-missing-role-annotations
    -Wno-missing-kind-signatures -Wno-missing-poly-kind-signatures
    -Wno-unrecognised-warning-flags -Wno-missed-specialisations

test-suite jolharg-web-database-test
  if (arch(javascript) || arch(wasm32))
    buildable: False

  hs-source-dirs:     test
  type:               exitcode-stdio-1.0
  default-language:   GHC2024
  default-extensions:
    NoGeneralisedNewtypeDeriving
    OverloadedStrings
    UnicodeSyntax

  main-is:            Spec.hs

  if !arch(wasm32)
    ghc-options: -threaded -rtsopts -with-rtsopts=-N

  ghc-options:
    -Wall -Werror -Weverything -Wno-unsafe -Wno-safe
    -Wno-missing-import-lists -Wno-missing-export-lists
    -Wno-implicit-prelude -Wno-missing-safe-haskell-mode
    -Wno-missing-kind-signatures -Wno-missing-poly-kind-signatures
    -Wno-missing-local-signatures -Wno-all-missed-specialisations
    -Wno-missed-specialisations -Wno-missing-role-annotations
    -Wno-unrecognised-warning-flags -Wno-missed-specialisations

  build-depends:
    , base   >=4.21.0.0 && <4.23.0.0
    , hspec  ^>=2.11.10

  -- , jolharg-web-database
  -- , hspec-core ^>=2.11.10
  -- , hspec-expectations ^>=0.8.4
  -- , HUnit
  -- , QuickCheck ^>=2.17.0.0
  build-tool-depends: hspec-discover:hspec-discover
  other-modules:      MainSpec
